Update deployment script to check for 'dist' directory existence before proceeding with installation

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,31 +25,17 @@ jobs:
           ssh ubuntu@129.158.214.211 << 'EOF'
             set -e  # Detener ejecución en caso de error
             
-            if [ ! -d "/var/www/html/mico/.git" ]; then
-              echo "📥 Clonando el repositorio por primera vez..."
-              sudo rm -rf /var/www/html/mico
-              sudo git clone git@github.com:ygnaciomarts/Mico.git /var/www/html/mico
-            else
-              echo "🔄 Configurando permisos seguros para Git..."
-              sudo git config --global --add safe.directory /var/www/html/mico
-
-              echo "🔄 Actualizando código con git pull..."
-              cd /var/www/html/mico
-              sudo git reset --hard  # Evitar problemas con archivos no rastreados
-              sudo git pull origin main
-            fi
-
             cd /var/www/html/mico
+
             echo "📦 Instalando dependencias..."
             sudo npm install
 
             echo "🔨 Construyendo la aplicación..."
             sudo npm run build
 
-            echo "🗂️ Verificando contenido de 'dist'..."
-            ls -la dist
-            if [ -z "$(ls -A dist)" ]; then
-              echo "❌ ERROR: La carpeta 'dist' está vacía. Revisa la configuración de 'npm run build'."
+            echo "🗂️ Verificando existencia de 'dist'..."
+            if [ ! -d "dist" ]; then
+              echo "❌ ERROR: No se encontró la carpeta 'dist'."
               exit 1
             fi
 
