--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,10 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          # Agregar la clave del servidor remoto al archivo known_hosts
-          ssh-keyscan -H 129.158.214.211 >> ~/.ssh/known_hosts
+          # Deshabilitar la verificación de la clave del servidor
+          echo "Host *" > ~/.ssh/config
+          echo "  StrictHostKeyChecking no" >> ~/.ssh/config
+          echo "  UserKnownHostsFile=/dev/null" >> ~/.ssh/config
 
       - name: 🚀 Desplegar en servidor
         run: |
